--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^22.4.1",
     "prisma": "^5.19.0",
     "ts-node-dev": "^2.0.0",
