--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^22.4.1",
+    "@types/nodemailer": "^6.4.15",
     "prisma": "^5.19.0",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.10",
@@ -31,6 +32,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.15",
     "slugify": "^1.6.6"
   }
 }
