--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uploadthing": "^7.0.2"
   }
 }
