--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "src/utils/types.d.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules"]
 }
