Update schema and settings: add timestamps to Currency model, ensure unique code in Payee model, and adjust Postman settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "conv",
         "EFRIS",
         "iban"
-    ]
+    ],
+    "postman.settings.dotenv-detection-notification-visibility": false
 }
